Created a page for all certificates

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- STAGE -->
     <div id="stage">
         <div id="stage-caption">
-            <h1 id="stage-title" class="display-3">My Portfolio!! </h1>
+            <h1 id="stage-title" class="display-4">My Portfolio!! </h1>
                 <h6 id="stage-desc">Sobhan Niroula</h6>
                 <a href="https://www.linkedin.com/in/sobhan-niroula/" class="btn btn-lg btn-info" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn Profile</a>
                 <a href="#it-projects" class="btn btn-lg btn-success"><i class="fas fa-project-diagram"></i> Skip to IT Projects <span>&darr;</span></a><br>
@@ -386,7 +386,7 @@
                     <li><a href="#photography">Photography</a></li>
                     <li><a href="#videography">Videography</a></li>
                     <li><a href="#it-projects">IT Projects</a></li>
-                    <li><a href="#quote-section">My Quote</a></li>
+                    <li><a href="certificates.html">My Certificates</a></li>
                 </ul>
             </div>
             <div class="col-md-3">
