Created meta tags for social media sharing

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta property="og:title" content="Sobhan Niroula Portfolio Website">
+    <meta property="og:image" content="img/Portfolio.png">
+    <meta property="og:description" content="This is my personal portfolio website. I have shared my skills and project I have done.">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -188,7 +191,7 @@
                     <div class="col-lg-5 overlap-div">
                        <h6>My IT Projects</h6>
                         <h2>Portfolio Website</h2>
-                        <p class="lead">The website for my portfolio. This is the exact website that you are in right now. It is made using simple HTML, CSS, JavaScript,JQuery, Bootstrap and Sass. </p>
+                        <p class="lead">The website for my portfolio. This is the exact website that you are in right now. It is made using simple HTML, CSS, JavaScript, JQuery, Bootstrap and Sass. </p>
                         <h5> HTML5 | CSS3 | JQuery | Bootstrap | Sass </h5> <br>
                         <a href="https://github.com/sobhanniroula/sobhanniroula.github.io" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub Repo</a>
                         <a href="https://sobhanniroula.github.io/" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a><br><br>
@@ -308,7 +311,7 @@
                 <div class="feature-content">
                     <div class="col-lg-5">
                         <h2>Thesis Project - ReactJS</h2>
-                        <p class="lead">My thesis topic was: Comparing a framework-less web application to a framework-based application.  The purpose of the web app is to search housing in Kathmandu city. Among those two types, this project is the second one: Framework-based. This project is made using modern approach in web development : ReactJs in the front-end and AWS in the backend, database and deploying, all in a secured way. It is a serverless application. </p>
+                        <p class="lead">My thesis topic was: Comparing a framework-less web application to a framework-based application.  The purpose of the web app is to search housing in Kathmandu city. Among those two types, this project is the second one: Framework-based. This project is made using modern approach in web development : ReactJs in the front-end and Amazon Web Service (AWS) in the backend, database and deploying, all in a secured way. It is a serverless application. </p>
                         <h5> ReactJs | AWS | Serverless </h5> <br>
                         <a href="https://github.com/sobhanniroula/ThesisProjectReact" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub Repo</a>
                         <a href="http://movemandu-deploy.s3-website.eu-central-1.amazonaws.com/" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a> <br> <br>
