Added project: Balloons

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                         <div class="col-lg-5  offset-lg-1 overlap-div">
                             <h2>Thesis Project - PHP</h2>
                             <p class="lead">My thesis topic was: Comparing a framework-less web application to a framework-based application. This project is the first one: framework-less. This project is completely made from scratch using old-school technologies. It is a small prototype project containing a homepage of the application with the functionality of registering new users and logging in old users, all in a secured way. </p>
-                            <h5> HTML5 | CSS3 | ES5 | PHP </h5> <br>
+                            <h5> HTML5 | CSS3 | ES5 | PHP | MYSQL </h5> <br>
                             <a href="https://github.com/sobhanniroula/ThesisProjectMain" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub Repo</a>
                             <a href="https://thesis-project-main.herokuapp.com/" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a><br><br>
                         </div>
