--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -65,9 +66,11 @@
         <div id="stage-caption">
             <h1 id="stage-title" class="display-4">My Portfolio!! </h1>
             <h6 id="stage-desc">Sobhan Niroula</h6>
-            <a href="https://www.linkedin.com/in/sobhan-niroula/" class="btn btn-lg btn-info" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn Profile</a>
-            <a href="#it-projects" class="btn btn-lg btn-success"><i class="fas fa-project-diagram"></i> Skip to IT Projects <span>&darr;</span></a><br>
+            <a href="https://github.com/sobhanniroula" class="btn btn-lg btn-dark" target="_blank"><i class="fab fa-github"></i> GitHub Profile</a>
+            <a href="https://www.linkedin.com/in/sobhan-niroula/" class="btn btn-lg btn-info" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn Profile</a><br>
             <a href="certificates.html" class="btn btn-lg btn-danger"><i class="fas fa-university"></i> See Certificates</a>
+            <a href="#it-projects" class="btn btn-lg btn-success"><i class="fas fa-project-diagram"></i> Skip to IT Projects <span>&darr;</span></a>
+
 
         </div>
     </div>
@@ -208,28 +211,28 @@
 
     <section id="it-projects">
 
-        <div id="it-project-9">
+        <div id="it-project-13">
             <div class="container">
                 <div class="row">
                     <div class="feature-content">
                         <div class="col-lg-6 overlap-div">
-                            <img src="img/CNN.png" alt="Project Flagship" id="CNN-img">
+                            <img src="img/Travelsite.png" alt="Project Travelsite" id="travelsite-img">
                             <img src="img/monitor-transparent.png" alt="Monitor" class="monitor-transparent">
                         </div>
                         <div class="col-lg-5 offset-lg-1">
                             <h6>My IT Projects</h6>
-                            <h2>CNN-Clone</h2>
-                            <p class="lead">This is a static webpage, which is the of clone of CNN website. Learnt during 'Result-Oriented web development' course on Udemy. Made using HTML5, CSS3 and Bootstrap 4. </p>
-                            <h5>HTML5 | CSS3 | Bootstrap</h5> <br>
-                            <a href="https://github.com/sobhanniroula/CNN-clone" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub Repo</a>
-                            <a href="https://sobhanniroula.github.io/others/CNN-clone" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a>
+                            <h2>Travelsite</h2>
+                            <p class="lead">A website for travel lovers. Made Using HTML5, CSS3, Bootstrap, JavaScript, NodeJS, Express, MongoDB, REST API and AJAX. Learnt during my 'Result-Oriented Web Development' course on Udemy. </p>
+                            <h5> HTML5 | CSS3 | Bootstrap | ES6 | NodeJS | Express | MongoDB | REST API | AJAX </h5> <br>
+                            <a href="https://github.com/sobhanniroula/Travelsite" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub Repo</a>
+                            <a href="https://sobhanniroula.github.io/others/Travelsite" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div id="it-project-8" class="back-dark">
+        <div id="it-project-12" class="back-dark">
             <div class="container">
                 <div class="row">
                     <div class="feature-content">
@@ -249,7 +252,47 @@
             </div>
         </div>
 
-        <div id="it-project-7">
+        <div id="it-project-11">
+            <div class="container">
+                <div class="row">
+                    <div class="feature-content">
+                        <div class="col-lg-6 overlap-div">
+                            <img src="img/CNN.png" alt="Project Flagship" id="CNN-img">
+                            <img src="img/monitor-transparent.png" alt="Monitor" class="monitor-transparent">
+                        </div>
+                        <div class="col-lg-5 offset-lg-1">
+                            <h2>CNN-Clone</h2>
+                            <p class="lead">This is a static webpage, which is the of clone of CNN website. Learnt during 'Result-Oriented web development' course on Udemy. Made using HTML5, CSS3 and Bootstrap 4. </p>
+                            <h5>HTML5 | CSS3 | Bootstrap</h5> <br>
+                            <a href="https://github.com/sobhanniroula/CNN-clone" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub Repo</a>
+                            <a href="https://sobhanniroula.github.io/others/CNN-clone" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="it-project-10" class="back-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="feature-content">
+                        <div class="col-lg-5 overlap-div">
+                            <h2>To-do List</h2>
+                            <p class="lead"> A to-do list app made by HTML5, CSS3 and JavaScript. Learnt during 'Result-Oriented Web Programming' course on Udemy. </p>
+                            <h5> HTML5 | CSS3 | JavaScript </h5> <br>
+                            <a href="https://github.com/sobhanniroula/To-Do-List" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub Repo</a>
+                            <a href="https://sobhanniroula.github.io/others/to-do-list/" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a><br><br>
+                        </div>
+                        <div class="col-lg-6  offset-lg-1 overlap-div">
+                            <img src="img/to-do.png" alt="Project To-do" id="todo-img">
+                            <img src="img/monitor-transparent.png" alt="Monitor" class="monitor-transparent">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="it-project-9">
             <div class="container">
                 <div class="row">
                     <div class="feature-content">
@@ -269,7 +312,7 @@
             </div>
         </div>
 
-        <div id="it-project-6" class="back-dark">
+        <div id="it-project-8" class="back-dark">
             <div class="container">
                 <div class="row">
                     <div class="feature-content">
@@ -289,7 +332,7 @@
             </div>
         </div>
 
-        <div id="it-project-5">
+        <div id="it-project-7">
             <div class="container">
                 <div class="row">
                     <div class="feature-content">
@@ -309,7 +352,7 @@
             </div>
         </div>
 
-        <div id="it-project-4" class="back-dark">
+        <div id="it-project-6" class="back-dark">
             <div class="container">
                 <div class="row">
                     <div class="feature-content">
@@ -329,7 +372,7 @@
             </div>
         </div>
 
-        <div id="it-project-3">
+        <div id="it-project-5">
             <div class="container">
                 <div class="row">
                     <div class="feature-content">
@@ -343,6 +386,46 @@
                             <h5> HTML5 | CSS3 | ES5 </h5> <br>
                             <a href="https://github.com/sobhanniroula" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub Repo</a>
                             <a href="https://sobhanniroula.github.io/others/pig-game/" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a><br><br>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="it-project-4" class="back-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="feature-content">
+                        <div class="col-lg-5">
+                            <h2>Balloons</h2>
+                            <p class="lead">A popping-up-balloons game, made with HTML5, CSS3 and JavaScript. Learnt during the 'Result-Oriented Web Development' course on Udemy. </p>
+                            <h5> HTML5 | CSS3 | ES5 </h5> <br>
+                            <a href="https://github.com/sobhanniroula/Balloons" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub Repo</a>
+                            <a href="https://sobhanniroula.github.io/others/balloons/" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a> <br> <br>
+                        </div>
+                        <div class="col-lg-6  offset-lg-1 overlap-div">
+                            <img src="img/balloons.png" alt="Project Balloons" id="balloons-img">
+                            <img src="img/monitor-transparent.png" alt="Monitor" class="monitor-transparent">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="it-project-3">
+            <div class="container">
+                <div class="row">
+                    <div class="feature-content">
+                        <div class="col-lg-6 overlap-div">
+                            <img src="img/block.png" alt="Project Block" id="block-img">
+                            <img src="img/monitor-transparent.png" alt="Monitor" class="monitor-transparent">
+                        </div>
+                        <div class="col-lg-5  offset-lg-1 overlap-div">
+                            <h2>Block Manipulation</h2>
+                            <p class="lead">Playing with JavaScript, created a block which can be changed using some JS functions. Created while learning Javascript in 'Result-Oriented Web Development' course on Udemy. </p>
+                            <h5> HTML5 | CSS3 | ES5 </h5> <br>
+                            <a href="https://github.com/sobhanniroula/Block-Manipulation" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub Repo</a>
+                            <a href="https://sobhanniroula.github.io/others/block-manipulation/" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a><br><br>
                         </div>
                     </div>
                 </div>
@@ -473,6 +556,7 @@
                 });
             });
         });
+
     </script>
 
 
@@ -483,4 +567,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body></html>
+</body>
+
+</html>
