Added new Certificate: FreeCodeCamp's FrontEnd Libraries

--- a/certificates.html
+++ b/certificates.html
@@ -56,6 +56,24 @@
 
     <section id="it-projects">
 
+        <div id="certificate-7">
+            <div class="container">
+                <div class="row">
+                    <div class="feature-content">
+                        <div class="col-lg-5 overlap-div">
+                            <h6>My Certificates</h6>
+                            <h2>Front End Certification</h2>
+                            <p class="lead">Gained by completing approximately 300 hours of coursework on "Front End Libraries" course, online on FreeCodeCamp. </p> <br><br>
+                        </div>
+                        <div class="col-lg-6  offset-lg-1 overlap-div">
+                            <img src="img/certificates/FCC-FrontEnd.png" alt="FCC Front End Course">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div id="certificate-6" class="back-dark">
             <div class="container">
                 <div class="row">
@@ -64,7 +82,6 @@
                             <img src="img/certificates/Udemy-Result-oriented.jpg" alt="Result-oriented course">
                         </div>
                         <div class="col-lg-5 offset-lg-1">
-                            <h6>My Certificates</h6>
                             <h2>Result-oriented Web Development</h2>
                             <p class="lead"> Gained by completing 46.5 hours of "The Result-Oriented Web Developer Course" online course on Udemy. </p> <br>
                         </div>
