--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
             <h6 id="stage-desc">Sobhan Niroula</h6>
             <a href="https://github.com/sobhanniroula" class="btn btn-lg btn-dark" target="_blank"><i class="fab fa-github"></i> GitHub Profile</a>
             <a href="https://www.linkedin.com/in/sobhan-niroula/" class="btn btn-lg btn-info" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn Profile</a><br>
-            <a href="https://drive.google.com/open?id=1pg7tIR3cmDoC-8cI5OHqPbm0WnsLgTHo" target="_blank" class="btn btn-lg btn-light"><i class="fas fa-graduation-cap"></i> My CV</a>
-            <a href="certificates.html" class="btn btn-lg btn-danger"><i class="fas fa-university"></i> See Certificates</a> <br>
+            <a href="https://www.freecodecamp.org/fccd6ddc2f7" target="_blank" class="btn btn-lg btn-fcc"><i class="fab fa-free-code-camp"></i> FreeCodeCamp Profile </a>
+            <a href="https://drive.google.com/open?id=1pg7tIR3cmDoC-8cI5OHqPbm0WnsLgTHo" target="_blank" class="btn btn-lg btn-light"><i class="fas fa-graduation-cap"></i> My CV</a> <br>
+            <a href="certificates.html" class="btn btn-lg btn-danger"><i class="fas fa-university"></i> See Certificates</a>
             <a href="#it-projects" class="btn btn-lg btn-success"><i class="fas fa-project-diagram"></i> Skip to IT Projects <span>&darr;</span></a>
 
 
