Added new project: Calculator

--- a/index.html
+++ b/index.html
@@ -162,11 +162,10 @@
 
     <!-- Videography Section -->
 
-    <section id="videography">
+    <section id="videography" class="back-dark">
         <div class="container">
             <div class="row">
                 <div class="feature-content">
-
                     <div class="col-lg-5">
                         <h6>My Videography Skills</h6>
                         <h2>Sobhan Videography</h2>
@@ -186,21 +185,22 @@
     <!-- Photoshop Section -->
 
     <section id="photoshop-section">
-        <div id="photoshop-area" class="back-dark">
+        <div id="photoshop-area">
             <div class="container">
                 <div class="row">
                     <div class="feature-content">
-                        <div class="col-lg-5 overlap-div">
+                       <div class="col-lg-6 overlap-div">
+                            <img src="img/me.jpg" alt="Project Portfolio" id="myself-img">
+                            <img src="img/monitor-transparent.png" alt="Monitor" class="monitor-transparent">
+                        </div>
+                        <div class="col-lg-5 offset-lg-1">
                             <h6>My Photo Editing Skills</h6>
                             <h2>Photoshop</h2>
                             <p class="lead">I always shoot pictures in RAW format, so that I can edit them in photoshop later. I have intermediate-level of editing pictures. I also have enough skills in photoshop that a web designer needs. In edition to this, I also have basic skills in video editing in Premiere Pro and After Effects. </p>
                             <h5> Adobe Photoshop | LightRoom | Premiere Pro | After Effects </h5> <br>
                             <br><br>
                         </div>
-                        <div class="col-lg-6  offset-lg-1 overlap-div">
-                            <img src="img/me.jpg" alt="Project Portfolio" id="myself-img">
-                            <img src="img/monitor-transparent.png" alt="Monitor" class="monitor-transparent">
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -212,6 +212,29 @@
     <!-- IT Section -->
 
     <section id="it-projects">
+        
+        <div id="it-project-14" class="back-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="feature-content">
+                        <div class="col-lg-5 overlap-div">
+                            <h6>My IT Projects</h6>
+                            <h2>Calculator App</h2>
+                            <p class="lead">I built 3 calculators, full-functioning and simple. First is made in vanilla JavaScript, second one in React JS and the third one in React Native. The third one is also deployed in Google Play Store. </p>
+                            <h5> HTML5 | CSS3 | JavaScript | ReactJS | ReactNative | Expo | Play Store </h5> <br>
+                            <a href="https://github.com/sobhanniroula/CalculatorApp-JavaScript" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub (JS)</a>
+                            <a href="https://github.com/sobhanniroula/CalculatorApp-ReactJS" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub (ReactJS)</a>
+                            <a href="https://github.com/sobhanniroula/CalculatorApp-React-Native" class="btn btn-info btn-lg" target="_blank" style="margin-top: 5px"><i class="fab fa-github"></i> GitHub (ReactNative)</a>
+                            <a href="https://play.google.com/store/apps/details?id=sobhanniroula.reactnative" class="btn btn-success btn-lg" target="_blank" style="margin-top: 5px; background-color: #009977"><i class="fab fa-google-play"></i> Visit Play Store</a><br><br>
+                        </div>
+                        <div class="col-lg-6  offset-lg-1 overlap-div">
+                            <img src="img/Calc.png" alt="Project Calculator" id="calc-img">
+                            <img src="img/monitor-transparent.png" alt="Monitor" class="monitor-transparent">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div id="it-project-13">
             <div class="container">
@@ -222,7 +245,6 @@
                             <img src="img/monitor-transparent.png" alt="Monitor" class="monitor-transparent">
                         </div>
                         <div class="col-lg-5 offset-lg-1">
-                            <h6>My IT Projects</h6>
                             <h2>Travelsite</h2>
                             <p class="lead">A website for travel lovers. Made Using HTML5, CSS3, Bootstrap, JavaScript, NodeJS, Express, MongoDB, REST API and AJAX. Learnt during my 'Result-Oriented Web Development' course on Udemy. </p>
                             <h5> HTML5 | CSS3 | Bootstrap | ES6 | NodeJS | Express | MongoDB | REST API | AJAX </h5> <br>
