Edited Play Store button

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             <a href="https://github.com/sobhanniroula/CalculatorApp-JavaScript" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub (JS)</a>
                             <a href="https://github.com/sobhanniroula/CalculatorApp-ReactJS" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub (ReactJS)</a>
                             <a href="https://github.com/sobhanniroula/CalculatorApp-React-Native" class="btn btn-info btn-lg" target="_blank" style="margin-top: 5px"><i class="fab fa-github"></i> GitHub (ReactNative)</a>
-                            <a href="https://play.google.com/store/apps/details?id=sobhanniroula.reactnative" class="btn btn-success btn-lg" target="_blank" style="margin-top: 5px; background-color: #009977"><i class="fab fa-google-play"></i> Visit Play Store</a><br><br>
+                            <a href="https://play.google.com/store/apps/details?id=sobhanniroula.reactnative" class="btn btn-success btn-lg" id="play-store" target="_blank"><i class="fab fa-google-play"></i> Visit Play Store</a><br><br>
                         </div>
                         <div class="col-lg-6  offset-lg-1 overlap-div">
                             <img src="img/Calc.png" alt="Project Calculator" id="calc-img">
