--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a href="https://github.com/sobhanniroula" class="btn btn-lg btn-dark" target="_blank"><i class="fab fa-github"></i> GitHub Profile</a>
             <a href="https://www.linkedin.com/in/sobhan-niroula/" class="btn btn-lg btn-info" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn Profile</a><br>
             <a href="https://www.freecodecamp.org/fccd6ddc2f7" target="_blank" class="btn btn-lg btn-fcc"><i class="fab fa-free-code-camp"></i> FreeCodeCamp Profile </a>
-            <a href="https://drive.google.com/open?id=1pg7tIR3cmDoC-8cI5OHqPbm0WnsLgTHo" target="_blank" class="btn btn-lg btn-light"><i class="fas fa-graduation-cap"></i> My CV</a> <br>
+            <a href="https://drive.google.com/open?id=1a77_VzS1Bhf6VIyL8mHWvvHs7cI_ypu7" target="_blank" class="btn btn-lg btn-light"><i class="fas fa-graduation-cap"></i> My CV</a> <br>
             <a href="certificates.html" class="btn btn-lg btn-danger"><i class="fas fa-university"></i> See Certificates</a>
             <a href="#it-projects" class="btn btn-lg btn-success"><i class="fas fa-project-diagram"></i> Skip to IT Projects <span>&darr;</span></a>
 
@@ -208,17 +208,55 @@
     </section>
 
 
-
     <!-- IT Section -->
 
     <section id="it-projects">
+
+            <div id="it-project-16" class="back-dark">
+                    <div class="container">
+                        <div class="row">
+                            <div class="feature-content">
+                                <div class="col-lg-5 overlap-div offset-lg-1">
+                                    <h6>My IT Projects</h6>
+                                    <h2>Movemandu App</h2>
+                                    <p class="lead">A native mobile app which is made to search apartments in Kathmandu City. It is made using React Native where various native components and features are used. React Native is used at the front-end. This app is currently under development. Node.js will be used at the back-end whereas MongoDB will be used as the database and JWT will be used for user authentication. REST API will be used for fetching posts. </p>
+                                    <h5> REACT NATIVE | NODE.JS | MONGODB | REST API | JWT </h5> <br>
+                                    <a href="https://github.com/sobhanniroula/Movemandu-App" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub</a> <br>
+                                </div>
+                                <div class="col-lg-6 overlap-div offset-lg-1">
+                                        <img src="img/movemandu-homescreen.png" alt="Project Movemandu App" id="movemandu-img">
+                                        <img src="img/mobile-frame-android.png" alt="Mobile" class="mobile-transparent">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        
+                <div id="it-project-15">
+                    <div class="container">
+                        <div class="row">
+                            <div class="feature-content">
+                                <div class="col-lg-6 overlap-div">
+                                    <img src="img/weather.png" alt="Project Weather App" id="weather-img">
+                                    <img src="img/mobile-frame-android.png" alt="Mobile" class="mobile-transparent">
+                                </div>
+                                <div class="col-lg-5">
+                                    <h2>Weather App</h2>
+                                    <p class="lead"> A web app which is also purely mobile-responsive, that can be used to search weather of any city in the world. It also provides 4 days forecast. It is made using React.js on the front-end and API call at the back-end. </p>
+                                    <h5> REACT.JS | REST API </h5> <br>
+                                    <a href="https://github.com/sobhanniroula/weather-app" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub Repo</a>
+                                    <a href="https://weather-app-sobhan.herokuapp.com/" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         
         <div id="it-project-14" class="back-dark">
             <div class="container">
                 <div class="row">
                     <div class="feature-content">
                         <div class="col-lg-5 overlap-div">
-                            <h6>My IT Projects</h6>
                             <h2>Calculator App</h2>
                             <p class="lead">I built 3 calculators, full-functioning and simple. First is made in vanilla JavaScript, second one in React JS and the third one in React Native. The third one is also deployed in Google Play Store. </p>
                             <h5> HTML5 | CSS3 | JavaScript | ReactJS | ReactNative | Expo | Play Store </h5> <br>
