--- a/index.html
+++ b/index.html
@@ -206,26 +206,47 @@
             </div>
         </div>
     </section>
+    <hr>
 
 
     <!-- IT Section -->
 
     <section id="it-projects">
 
-            <div id="it-project-16" class="back-dark">
+            <div id="it-project-17">
                     <div class="container">
                         <div class="row">
                             <div class="feature-content">
-                                <div class="col-lg-5 overlap-div offset-lg-1">
+                                <div class="col-lg-6 overlap-div">
+                                    <img src="img/movemandu-homescreen.png" alt="Project Weather App" id="weather-img">
+                                    <img src="img/mobile-frame-android.png" alt="Mobile" class="mobile-transparent">
+                                </div>
+                                <div class="col-lg-5">
                                     <h6>My IT Projects</h6>
                                     <h2>Movemandu App</h2>
                                     <p class="lead">A native mobile app which is made to search apartments in Kathmandu City. It is made using React Native where various native components and features are used. React Native is used at the front-end. This app is currently under development. Node.js will be used at the back-end whereas MongoDB will be used as the database and JWT will be used for user authentication. REST API will be used for fetching posts. </p>
                                     <h5> REACT NATIVE | NODE.JS | MONGODB | REST API | JWT </h5> <br>
                                     <a href="https://github.com/sobhanniroula/Movemandu-App" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub</a> <br>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            <div id="it-project-16" class="back-dark">
+                    <div class="container">
+                        <div class="row">
+                            <div class="feature-content">
+                                <div class="col-lg-5 overlap-div">
+                                    <h2>Hand Detecting App</h2>
+                                    <p class="lead"> A fun app which basically detects the movement of your hand on the screen (in front of the webcam) and alerts you with some kind of sound (customizable). This app can be really useful if you have any bad habit of bringing your hand in front of your face quite often (for example: biting your nails, poking your nose or playing with your eyes).  Built using simple HTML, CSS, JavaScript and a JS library called handtrack.js. </p>
+                                    <h5> HTML5 | ES6 | HANDTRACK.JS </h5> <br>
+                                    <a href="https://github.com/sobhanniroula/Hand-Detector" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                                    <a href="https://sobhanniroula.github.io/others/hand-detector" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a>
+                                </div> <br>
                                 <div class="col-lg-6 overlap-div offset-lg-1">
-                                        <img src="img/movemandu-homescreen.png" alt="Project Movemandu App" id="movemandu-img">
-                                        <img src="img/mobile-frame-android.png" alt="Mobile" class="mobile-transparent">
+                                        <img src="img/hand-detector.png" alt="Project Hand Detector" id="hand-detector-img">
+                            <img src="img/monitor-transparent.png" alt="Monitor" class="monitor-transparent">
                                 </div>
                             </div>
                         </div>
