Changed some styles

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <!-- Photoshop Section -->
 
     <section id="photoshop-section">
-        <div id="photoshop-area">
+        <div id="photoshop-area" class="feature-alt">
             <div class="container">
                 <div class="row">
                     <div class="feature-content">
@@ -206,7 +206,6 @@
             </div>
         </div>
     </section>
-    <hr>
 
 
     <!-- IT Section -->
@@ -345,7 +344,7 @@
                         </div>
                         <div class="col-lg-5 offset-lg-1">
                             <h2>CNN-Clone</h2>
-                            <p class="lead">This is a static webpage, which is the of clone of CNN website. Learnt during 'Result-Oriented web development' course on Udemy. Made using HTML5, CSS3 and Bootstrap 4. </p>
+                            <p class="lead">This is a static webpage, which is clone of the CNN website. Learnt during 'Result-Oriented web development' course on Udemy. Made using HTML5, CSS3 and Bootstrap 4. </p>
                             <h5>HTML5 | CSS3 | Bootstrap</h5> <br>
                             <a href="https://github.com/sobhanniroula/CNN-clone" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub Repo</a>
                             <a href="https://sobhanniroula.github.io/others/CNN-clone" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a>
