Updated Travelsite weblink

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                             <p class="lead">A website for travel lovers. Made Using HTML5, CSS3, Bootstrap, JavaScript, NodeJS, Express, MongoDB, REST API and AJAX. Learnt during my 'Result-Oriented Web Development' course on Udemy. </p>
                             <h5> HTML5 | CSS3 | Bootstrap | ES6 | NodeJS | Express | MongoDB | REST API | AJAX </h5> <br>
                             <a href="https://github.com/sobhanniroula/Travelsite" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub Repo</a>
-                            <a href="https://sobhanniroula.github.io/others/Travelsite" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a>
+                            <a href="https://travelsite-sobhan.herokuapp.com/" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a>
                         </div>
                     </div>
                 </div>
@@ -445,7 +445,7 @@
                             <a href="https://github.com/sobhanniroula/Quiz-Game" class="btn btn-info btn-lg" target="_blank"><i class="fab fa-github"></i> GitHub Repo</a>
                             <a href="https://sobhanniroula.github.io/others/quiz-app/" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a> <br> <br>
                         </div>
-                        <div class="col-lg-6  offset-lg-1 overlap-div">
+                        <div class="col-lg-6 offset-lg-1 overlap-div">
                             <img src="img/Quiz.png" alt="Project Quiz" id="quiz-img">
                             <img src="img/monitor-transparent.png" alt="Monitor" class="monitor-transparent">
                         </div>
