thumbnails for the new three projects

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             <a href="http://djszji0zj4svy.cloudfront.net/" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a>
                         </div> <br>
                         <div class="col-lg-6 overlap-div offset-lg-1">
-                            <img src="img/hand-detector.png" alt="Project Hand Detector" id="hand-detector-img">
+                            <img src="img/notify.png" alt="Project Notify" id="notify-img">
                             <img src="img/monitor-transparent.png" alt="Monitor" class="monitor-transparent">
                         </div>
                     </div>
@@ -264,7 +264,7 @@
                             <a href="https://sobhanniroula.github.io/others/meditation-app/" class="btn btn-success btn-lg" target="_blank"><i class="fas fa-globe-americas"></i> Visit Website</a>
                         </div>
                         <div class="col-lg-6  offset-lg-1 overlap-div">
-                            <img src="img/Calc.png" alt="Project Calculator" id="calc-img">
+                            <img src="img/meditation.png" alt="Project Meditation App" id="meditation-img">
                             <img src="img/monitor-transparent.png" alt="Monitor" class="monitor-transparent">
                         </div>
                     </div>
@@ -277,7 +277,7 @@
                 <div class="row">
                     <div class="feature-content">
                         <div class="col-lg-6 overlap-div">
-                            <img src="img/Travelsite.png" alt="Project Travelsite" id="travelsite-img">
+                            <img src="img/voice.png" alt="Project Voice" id="voice-img">
                             <img src="img/monitor-transparent.png" alt="Monitor" class="monitor-transparent">
                         </div>
                         <div class="col-lg-5 offset-lg-1">
