--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
-    <title>SOBHAN NIROULA - public portfolio!! </title>
+    <title>SOBHAN NIROULA - my public portfolio!! </title>
 
 </head>
 
